# monad-farming-software

./: .env  .gitignore  Cargo.toml  Makefile  README.md  c.json
common/: Cargo.toml
common/src/: config.rs  error.rs  lib.rs  state.rs
common/src/onchain/: client.rs  constants.rs  error.rs  mod.rs  token.rs
common/src/onchain/dapps/: ambient.rs  apriori.rs  bean.rs  common.rs  gas_zip.rs  hashflow.rs  kinza.rs  mod.rs  nad_domains.rs  shmonad.rs
data/: config.toml
database/: Cargo.toml
database/src/: db.rs  error.rs  lib.rs
database/src/entity/: account.rs  mod.rs  prelude.rs
database/src/entity/impls/: account.rs  mod.rs  prelude.rs
database/src/repositories/: account.rs  mod.rs
database/src/use_cases/: accounts.rs
database/src/utils/: fs.rs  random.rs
migration/src/: account_create_table.rs  lib.rs  m20220101_000001_create_table.rs
src/: cli.rs  error.rs  logger.rs  main.rs
src/modules/: menu.rs  mod.rs
src/modules/warmup/: bridge.rs  error.rs  lending.rs  mint.rs  mod.rs  swap.rs
src/onchain/: client.rs  error.rs  mod.rs  token.rs
src/onchain/dapps/: ambient.rs  apriori.rs  bean.rs  gas_zip.rs  gaz_zip.rs  hashflow.rs  kinza.rs  mod.rs  shmonad.rs
