[package]
name = "monad-pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
alloy = { version = "0.11.1", features = ["full"] }
rquest = { version = "2.1.5", features = ["json", "cookies", "socks"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.139"
alloy-chains = "0.1.64"
chrono = "0.4.40"
