[package]
name = "monad-pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
alloy = { workspace = true }
rquest = { version = "2.1.5", features = ["json", "cookies", "socks"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
alloy-chains = "0.1.64"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
dialoguer = "0.11.0"

database = { path = "./database" }

[workspace]
members = [".", "migration", "database"]

[workspace.dependencies]
thiserror = "2.0.12"
alloy = { version = "0.11.1", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
