[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
alloy = { workspace = true }
strum = { version = "0.27.1", features = ["derive"] }
alloy-chains = { workspace = true }
tracing = { workspace = true }
chrono = "0.4.40"
serde = { workspace = true }
rquest = { workspace = true }
toml = "0.8.20"
fake = "4.0.0"
