[package]
name = "database"
version = "0.1.0"
edition = "2024"

[lib]
name = "database"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "1.1.5", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
async-trait = "0.1"
rand = "0.9.0"
toml = "0.8.20"
thiserror = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
derive_builder = "0.20.2"
migration = { path = "../migration" }
rquest = { workspace = true }
common = { path = "../common" }
